--- a/servis.html
+++ b/servis.html
@@ -4,7 +4,8 @@
 	<title>servis</title>
 </head>
 <body>
-	servis <br>good traning <br>school <br> go 
+	servis <br>good traning <br>school <br> go <br>do
+	<br>ok <br>continue 
 
 </body>
 </html>
